# CMP9767-Assessment-LIMO-Robot-Pothole-Detection-

./: README.md  pothole_coordinates.txt  severity_log.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/LIMO_Assessment/share/LIMO_Assessment/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/limo_assessment/lib/limo_assessment/: HSV_pothole_detector  adeola_marker  adeola_posedetector  adeola_posedetector2  adeola_severity_report  autonomous_navigation  autonomous_navigation1  draw_circle  navigation  navigation2  pothole_counter  pothole_detector  test_node
install/limo_assessment/share/limo_assessment/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build  latest_list
src/limo_assessment/: package.xml  setup.cfg  setup.py
src/limo_assessment/launch/: pothole_coordinates.txt  pothole_detector.launch.py  severity_log.txt
src/limo_assessment/limo_assessment/: 1.py  Color processing.py  Report.py  Report2.py  Test10.py  Test2.py  Test3.py  Test4.py  Test5.py  Test6.py  Test7.py  Test8.py  Test9.py  adeola_autonomous_navigation1.py  adeola_autonomous_navigation2.py  adeola_marker.py  adeola_posedetector1.py  adeola_posedetector2.py  adeola_pothole_counter.py  adeola_severity_report.py  autonomous_navigation.py  draw_circle.py  map1.py  map2.py  map3.py  map4.py  map5.py  map6.py  mover.py  mover2.py  navigation.py  pothole_counter.py  pothole_detector.py  pothole_detectorHSV.py  severity_log.txt  test2.py
src/limo_assessment/limo_assessment/Alternative codes/: adeola_autonomous_navigation2.py
src/limo_assessment/resource/: my_map.pgm  my_map.yaml
