<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>LIMO_Assessment</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="adeola@todo.todo">adeola</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>opencv</depend>
  <depend>matplotlip</depend>
  <depend>robot</depend>
  <depend>localization</depend>
  <depend>slam_toolbox</depend>
  <depend>cartographer</depend>
  <depend>nav2</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>dwb_controller</depend>
  <depend>ros2_sensor_msgs</depend>
  <depend>rosidl_default_generators.</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
